docs/5.4/modules/en/pages/azuredevops.adoc
= Azure DevOps
:description: Scan vulnerabilities in Azure DevOps build pipelines using the SUSE® Security scanner to check container images and set thresholds for failing builds
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2025-05-08
:page-revdate: {revdate}
:page-opendocs-origin: /06.scanning/03.build/04.azuredevops/04.azuredevops.md
:page-opendocs-slug:  /scanning/build/azuredevops

[#_scan_for_vulnerabilities_in_the_azure_devops_build_pipeline]
== Scan for Vulnerabilities in the Azure DevOps Build Pipeline

The {product-name} scanner can be triggered from the Azure DevOps pipeline by using the {product-name} extension published in the Azure DevOps Marketplace.

image:azure_devops.png[AzureDevOps]

The extension supports both remote and local scanning where the {product-name} controller can remotely scan an image in a registry during the build, or dynamically start a local controller to scan the image on the Azure agent vm.

In addition, make sure there is a {product-name} scanner container deployed and configured to connect to the Allinone or Controller. In 4.0 and later, the neuvector/scanner container must be deployed separate from the allinone or controller.

* Scan image with {product-name} task integrates the {product-name} vulnerability scanner into an Azure DevOps Pipeline.
* Perform vulnerability scans of a container image after the image build on an external {product-name} controller instance or on a local {product-name} controller instance which is running in service container inside a pipeline.
* Define thresholds for failing builds based on the number of detected vulnerabilities of different severities.
* Provide a detailed report of an image scan for analysis in the build summary tab.
* External {product-name} controller instances are defined as service endpoints to decouple build pipeline definitions from connection parameters and credentials.

An overview with sample screens can be found at https://marketplace.visualstudio.com/items?itemName=NeuVector.neuvector-vsts.
